Migrate to MPS 2022.3, fix MPS-35443